# lettuce

./: .codeclimate.yml  .gitignore  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  TestLettuce.ipynb  bench_extension.py  main.py  native_cuda_synopsis.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: CI.yml  codeql.yml  codeql_python.yml  flake8_new.yml  lint.yml
docs/: Makefile  README.md  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
examples/: 00_simplest_TGV.py  01a_first_example_TGV.ipynb  01b_first_example_obstacle.py  02_converging_flow.py  02_converging_obstacle_flow.py  03_outputs_TGV.py  A_first_example.ipynb  Couette_Example.ipynb  DecayingTurbulence.ipynb  Poiseuille_Example.ipynb  ReducedTGVSimulation.ipynb  Simulation_and_outputs.py  TGV_flow.ipynb  generalUsage.py  multiphase-lbm.ipynb  obstacle.ipynb  partiallysaturated_obstacle.py  porous_medium.ipynb  something_is_not_right.ipynb
examples/Brachet/: Brachet_1983_tgv3d_enstrophy_Re100.csv  Brachet_1983_tgv3d_enstrophy_Re1600.csv  Brachet_1983_tgv3d_enstrophy_Re200.csv  Brachet_1983_tgv3d_enstrophy_Re3000.csv  Brachet_1983_tgv3d_enstrophy_Re400.csv  Brachet_1983_tgv3d_enstrophy_Re5000.csv  Brachet_1983_tgv3d_enstrophy_Re800.csv
examples/FullTGV/: DisEkin-Rey100-Res64-BGK.csv  DisEkin-Rey100-Res64-nofneq.csv  DisEns-Rey100-Res64-BGK.csv  DisEns-Rey100-Res64-nofneq.csv  DisSij-Rey100-Res64-BGK.csv  DisSij-Rey100-Res64-nofneq.csv
examples/WIP/: build_decomposition.py  build_domain.py  build_flow.py  mpi_tgv3d.py
examples/advanced_flows/: FailingTGV.py  FailingTGVandObstacle.py  LidDrivenCavity.ipynb  MixingLayer.ipynb  ObstaclePartiallySaturated.py  PartiallySaturatedObstacle.py  PorousMedium.ipynb
examples/development/: .gitignore  example_progress_reporter_based_on_simplest_TGV.py  manually_generate_cuda_native.py
examples/simple_flows/: Couette.ipynb  DecayingTurbulence.ipynb  LambOseenVortex.py  Obstacle.ipynb  Poiseuille.ipynb  ReducedTGV.py
lettuce/: ReducedTGVSimulation.ipynb  __init__.py  _context.py  _flow.py  _simulation.py  _stencil.py  _unit.py  _version.py  base.py  boundary.py  cli.py  collision.py  datautils.py  distutil.py  domdec.py  equilibrium.py  extension.py  force.py  io.py  lattice.py  lattice_base.py  lattices.py  moment.py  moments.py  neural.py  observable.py  observables.py  pipeline.py  reporter.py  reporters.py  simulation.py  simulation_reducedTGV.py  stencil.py  stencils.py  streaming.py  symmetry.py  unit.py  util.py
lettuce/cuda_native/: __init__.py  _boundary.py  _collision.py  _default_code_gen.py  _generator.py  _registry.py  _template.py  _transformer.py  _util.py
lettuce/ext/: __init__.py
lettuce/extensions/: README.rst
lettuce/extensions/cuda/: CMakeLists.txt  README.rst  lettuce.cu  lettuce_cuda.cpp  lettuce_cuda_equilibrium.cu  lettuce_cuda_kernel.cu  lettuce_cuda_lattice.cu  lettuce_cuda_stencil.cu  streaming.cu
lettuce/flow/: decayingturbulence.py  doublyshear.py
lettuce/flows/: README.rst  __init__.py  building.py  channel.py  couette.py  cylinder2D.py  decayingturbulence.py  doublyshear.py  flow.py  liddrivencavity.py  obstacle.py  poiseuille.py  taylorgreen.py  tgv.py  util.py
lettuce/gen_native/: __init__.py  __main__.py  collision.py  collision_bgk.py  collision_no.py  equilibrium.py  equilibrium_quadratic.py  generator_kernel.py  generator_module.py  generator_util.py  stencil.py  stencil_d1q3.py  stencil_d2q9.py  stencil_d3q19.py  stencil_d3q27.py  streaming.py  streaming_no.py  streaming_standard.py  wrapper.py
lettuce/gencuda/: Collision.py  Cuda.py  Equilibrium.py  KernelGenerator.py  Lattice.py  ModuleGenerator.py  Stencil.py  Stream.py  __init__.py  __main__.py
lettuce/native/: __init__.py  _collision.py  _generator.py  _template.py
lettuce/native_generator/: __init__.py  __main__.py  _base.py  _boundary.py  _cuda.py  (+27 more)
myTest/: Brache_TGVortex_ReferenzAusLettucePaper.csv  OstacleCylinder2D.ipynb  TaylorGreenEnergyDissipation.ipynb  Teste Parabel-u-Inlet.ipynb  ltExample_obstacle_cylinder2D.ipynb  ltExample_obstacle_triangle2D.ipynb
old_tests/: conftest.py  test_boundaries.py  test_collision.py  test_equilibrium.py  test_flows.py  test_force.py  test_moments.py  test_native.py  test_observables.py  test_readme.py  test_reporters.py  test_simulation.py  test_stencils.py  test_streaming.py  test_util.py
pyevtk/: __init__.py  hl.py
tests/: __init__.py  common.py  conftest.py  test_boundaries.py  test_boundary.py  test_checkpoint.py  test_cli.py  test_collision.py  test_convergence.py  test_domain.py  test_equilibrium.py  test_flows.py  test_force.py  test_io.py  test_lattices.py  test_moments.py  test_native.py  test_native_bgk_collision.py  test_native_bounce_back.py  test_native_equilibrium_outlet_p.py  test_native_equilibrium_pu.py  test_native_streaming.py  test_neural.py  test_observables.py  test_readme.py  test_reporters.py  test_simulation.py  test_stencils.py  test_streaming.py  test_symmetry.py  test_unit.py  test_util.py
torchdd/: __init__.py  communication.py  ddtensor.py  decompostion.py  domain.py  mpi.py
(+253 files in other folders)
