[build-system]
requires = ["setuptools>=61", "wheel", "versioneer>=0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "lettuce"
version = "0.2.3"
description = "Lattice Boltzmann Python GPU"
readme = "README.md"
requires-python = "==3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.7",
    "h5py==3.11.0",
    "matplotlib>=3.9.2",
    "mmh3>=4.1.0",
    "numpy>=2.1.0",
    "packaging>=24.1",
    "pyevtk>=1.6.0",
    "pytest>=8.3.2",
    "setuptools>=72.1.0",
    "torch>=2.6.0",
    "vtk>=9.5.0",
]

[project.scripts]
lettuce = "lettuce.cli:main"

[project.urls]
Homepage = "https://github.com/lettucecfd/lettuce"

[tool.setuptools.packages.find]
include = ["lettuce*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "lettuce/_version.py"
versionfile_build = "lettuce/_version.py"
tag_prefix = ""
parentdir_prefix_version = "lettuce-"

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
]
cu124 = [
  "torch>=2.6.0",
]
cu126 = [
  "torch>=2.6.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
    { extra = "cu126" },
  ],
]

[tool.uv.sources]
torch = [
    # Korrekte Marker, die an die Extra-Marker gebunden sind.
    # macOS wird standardmäßig auf CPU gesetzt
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32' or sys_platform == 'darwin'"},
    { index = "pytorch-cu124", extra = "cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true